--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
+
 html,
 body {
   font-family: "montserrat", sans-serif;
