--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -116,6 +116,7 @@ body {
 }
 .events {
   display: flex;
+  position: relative;
   justify-content: space-between;
   box-sizing: border-box;
 }
@@ -155,4 +156,42 @@ body {
 .events__img {
   flex: 1;
   min-width: 400px;
+}
+.events__img {
+}
+.events__img-1 {
+  object-fit: cover;
+  position: absolute;
+  top: 120px;
+  right: 120px;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+.events__img-2 {
+  position: absolute;
+  object-fit: cover;
+  top: 380px;
+  right: 120px;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+.events__img-3 {
+  position: absolute;
+  object-fit: cover;
+  top: 350px;
+  right: 320px;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+.events__img-4 {
+  position: absolute;
+  object-fit: cover;
+  top: 180px;
+  right: 380px;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
 }
